 
*[#1468] unable to load cart in idrop lite from idrop web
**Data cache feature used by shopping cart in idrop lite defaults to purge old requests, but this can be problematic if there is a lot of clock drift, so instead of a couple of minutes, the cleanup now purges files based on a number of days, making it much less likely that files are deleted at the wrong time.  This clock slop was causing the cart to not be available in some cases because it was purged before access

*[#1410] -92111 errors accessing zone collections when zone is down
**Added zone unavailable exception

*[#1555] truncation of user DN when adding using GenAdminPI add user, works with GenAdmin for aua
**UserAO (when adding user) uses 'iadmin aua' call instead of add user call to set DN.  This is an overhead for an iRODS bug.

*[#1553] faulty sl4j bindings
**Removed explicit binding on log4j by removing binding library from maven dependencies


==Features==

*[#1264] [iROD-Chat:9666] Referencing Data Objects
**Added findById() methods to DataObjectAO and CollectionAO

*[#1250] jargon/idrop performance testing and optimization for 3.3.2
**Added cache of server properties in IRODSSession to avoid repreated queries for same host/zone

*[#902] IP - ils -A performance fix
**Add zoneHint capability to specific query
**Implement optional specific query solution for ils which does not expand group membership

*[#1392] remove icommands from remaining unit tests
**Remove wrapped icommands from remaining unit tests

*[#1392] Resource AVU methods to add and remove metadata from resources

*[#1554] user dn not being updated by userAO
**Added methods to modify user DN, put into user update code to automatically manage DN

*[#1556] up/download performance of idrop web
**Added new features to Stream2StreamAO for smarter buffering of stream copies

